[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ciphericals'
version = '0.0.1'
description = 'Educational cryptography library — classical to modern ciphers.'
authors = [{name='Adiii'}]
license = {text='MIT'}
readme = 'README.md'
dependencies = []
